# gitzap

./: .gitignore  Cargo.toml  README.md  config.toml  gitzap_temp.json  main.rs
.github/workflows/: ci.yaml  code_coverage.yaml
src/: cli.rs  config.rs  constants.rs  git.rs  lib.rs  main.rs  utils.rs
tests/: config.rs  git.rs
