[package]
name = "gitzap"
description = "Automates the process of adding, committing, and pushing changes to a GitHub repository."
authors = ["Mohammad Zain Abbas <mohammadzainabbas@gmail.com>"]
version = "0.1.0"

edition = "2021"

[dependencies]
git2 = "0.13.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "3.0"
clap = "4.4.18"
